# Payload-Software

./: .gitignore  .travis-ci.sh  .travis.yml  README.md  helloworld.txt
Problem_Statement_berezam/: Makefile  Problem_Statement.tex
arduino/: teensySerialComm.ino
capstone-documentation/33_design_document/: 33_design_document.tex  Makefile  bibliography.bib
capstone-documentation/33_midterm_progress_report/: Group_33_Midterm_Progress_Report.tex  Makefile
capstone-documentation/33_problem_statement/: Problem_Statement.tex  probstatement_33_final.tar.bz2
capstone-documentation/33_progress_report/: 33_progress_report.tex
capstone-documentation/33_requirements_document/: Group_33_Requirements_Document_Final.tex  Makefile  main.tex  mission-profile.eps  srs.tex
capstone-documentation/33_spring_midterm_progress_report/: 33_spring_midterm_progress_report.tex
capstone-documentation/33_technology_review/: Technology_Review.tex  mybib.bib  table.eps
capstone-documentation/problem_statement_turkingk/: capstone-PS.tar.bz2  main.tex
capstone-documentation/struthj_problemstatement/: struthj_problemstatement.tex
capstone-documentation/technologyreview_berezam/: Makefile  Technology_Review.tex  (+1 more)
drive_routines/: README.md  battery_drain.py  minimum.py
helpful_tools/: catkin
latex_template/: main.tex  makefile  master.tex  text.tex
rover_alpha/: objectAvoidance.py  simpleTurn.py  simpleTurn180.py
technologyreview_berezam/: Technology_Review.tex
usli_rover/: CMakeLists.txt  package.xml
usli_rover/launch/: basic.launch
usli_rover/src/: rover.py
(+36 files in other folders)
